--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "hatch-cli"
+name = "hatchengine-cli"
 version = "1.0.0"
 description = "Hatch Game Engine CLI"
 readme = "README.md"
